# orocos-rtt-examples

./: release-exercises.sh
rtt-exercises/: .tb_history  README  orocos_exercises.rosinstall
rtt-exercises/controller-1/: .cproject  .project  CMakeLists.txt  Deployer-site.cpf  Exercise.txt  manifest.xml  statemachine.osd
rtt-exercises/controller-1/components/automatic/: Automatic.cpp  Automatic.hpp  CMakeLists.txt
rtt-exercises/controller-1/components/controller/: CMakeLists.txt  Controller.cpp  Controller.hpp
rtt-exercises/controller-1/components/joystick/: CMakeLists.txt  Joystick.cpp  Joystick.hpp
rtt-exercises/controller-1/components/modeswitch/: CMakeLists.txt  ModeSwitch.cpp  ModeSwitch.hpp
rtt-exercises/controller-1/components/plant/: CMakeLists.txt  Plant.cpp  Plant.hpp
rtt-exercises/controller-1/deployment/: Reporting.cpf  application.cpf  controller.cpf  minimal.cpf  plant.cpf  program.ops  statemachine.osd
rtt-exercises/controller-youbot/: CMakeLists.txt  Exercise.txt  README  manifest.xml
rtt-exercises/controller-youbot/components/: CMakeLists.txt
rtt-exercises/controller-youbot/components/areadetection/: CMakeLists.txt  Exercise.txt  areadetection-component.cpp  areadetection-component.hpp
rtt-exercises/controller-youbot/components/controller/: CMakeLists.txt  Exercise.txt  controller-component.cpp  controller-component.hpp
rtt-exercises/controller-youbot/components/localisation/: CMakeLists.txt  Exercise.txt  localisation-component.cpp  localisation-component.hpp
rtt-exercises/controller-youbot/components/nobot/: CMakeLists.txt  Exercise.txt  nobot-component.cpp  nobot-component.hpp
rtt-exercises/controller-youbot/components/supervisor/: Exercise.txt  supervisor.lua  supervisor_fsm.lua
rtt-exercises/controller-youbot/components/teleop/: CMakeLists.txt  teleop-component.cpp  teleop-component.hpp
rtt-exercises/controller-youbot/deployment/: updater.lua  youbot.lua
rtt-exercises/controller-youbot/launch/: ps3joy.launch  simulator.launch
rtt-exercises/hello-1-task-execution/: .cproject  .project  CMakeLists.txt  HelloWorld.cpp  manifest.xml  orocos-hello-1-task-execution.pc.in  start.ops
rtt-exercises/hello-2-properties/: .cproject  .project  CMakeLists.txt  HelloWorld.cpp  manifest.xml  orocos-hello-2-properties.pc.in  start.ops
rtt-exercises/hello-3-dataports/: .cproject  .project  CMakeLists.txt  HelloWorld.cpp  manifest.xml  orocos-hello-3-dataports.pc.in  start.ops
rtt-exercises/hello-4-methods/: .cproject  .project  HelloWorld.cpp
rtt-exercises/hello-4-operations/: .cproject  .project  CMakeLists.txt  HelloWorld.cpp  manifest.xml  orocos-hello-4-operations.pc.in  start.ops
rtt-exercises/hello-5-commands/: .cproject  .project  HelloWorld.cpp
rtt-exercises/hello-5-services/: .cproject  .project  CMakeLists.txt  HelloWorld.cpp  Makefile  manifest.xml  orocos-hello-5-services.pc.in
rtt-exercises/hello-6-events/: .cproject  .project  HelloWorld.cpp
rtt-exercises/hello-6-scripting/: .cproject  .project  CMakeLists.txt  HelloWorld.cpp  manifest.xml  orocos-hello-6-scripting.pc.in  program.ops  start.ops  statemachine.osd
rtt-exercises/hello-7-deployment/: .cproject  .project  CMakeLists.txt  Hello.cpp  Makefile  World.cpp  application.ops  application.xml  manifest.xml  orocos-hello-7-deployment.pc.in  solution.xml
rtt-exercises/helloworld/: CMakeLists.txt  HelloWorld.cpp  Makefile  manifest.xml  orocos-helloworld.pc.in
simple-examples/: README
simple-examples/corba-example/: ExecutionClient.cxx  ExecutionServer.cxx  ExecutionServer.hpp  Makefile  README  SingleProcess.cxx  SmallNetwork.cpp  program.ops  startdemo.sh
simple-examples/dataflow-task/: DataFlowTask.cxx  Makefile  README
simple-examples/deployment/: Controller.cpp  Makefile  Plant.cpp  README  controller-program.ops  controller.cpf  example.cpf  reporting.cpf
simple-examples/embedded-task/: EmbeddedTask.cpp  Makefile  README
simple-examples/motioncontrol/: CMakeLists.txt  README
simple-examples/motioncontrol/config/: FindComponents.cmake  FindKDL.cmake
simple-examples/motioncontrol/cpf/: CartesianGeneratorPos.cpf  Kuka160nAxesVelocityController.cpf  Kuka361nAxesVelocityController.cpf  nAxesGeneratorPos.cpf  reporter.cpf
simple-examples/motioncontrol/programs/: program_moveto.ops
simple-examples/motioncontrol/src/: CMakeLists.txt  kuka361.kin  nAxisTest.cpp
simple-examples/motioncontrol/states/: states.osd
simple-examples/simple-task/: Makefile  README  SimpleTask.cxx
simple-examples/task-intro/: CountingSM.osd  Makefile  PeriodicTaskContext.hpp  README  ReactiveSM.osd  ReactiveTaskContext.hpp  TaskIntro.cxx  WaitingTaskContext.hpp  program.ops
simple-examples/taskstate/: Makefile  TaskState.cpf  TaskState.cpp
