#SET( MODEL "controller" )

#ADD_CUSTOM_COMMAND( OUTPUT RTW${MODEL}-${OROCOS_TARGET}
#                    COMMAND make -C ${CMAKE_CURRENT_SOURCE_DIR}/${MODEL}_orocos -f ${MODEL}.mk OROPATH=${OROCOS_INSTALL} USER_INCLUDES="-I${PROJ_SOURCE_DIR}" CC="${CMAKE_C_COMPILER}" CXX="${CMAKE_CXX_COMPILER}"
#                    COMMAND mv ${CMAKE_CURRENT_SOURCE_DIR}/RTW${MODEL}.so RTW${MODEL}-${OROCOS_TARGET}.so
#                    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${MODEL}_orocos/${MODEL}.mk)

#ADD_CUSTOM_TARGET( Create-${MODEL} ALL DEPENDS RTW${MODEL}-${OROCOS_TARGET} )
#ADD_CUSTOM_TARGET( clean make -C  ${CMAKE_CURRENT_SOURCE_DIR}/${MODEL}_orocos -f ${MODEL}.mk clean )

ADD_LIBRARY(usecase-controller-${OROCOS_TARGET} SHARED Controller.cpp )